kube/gcp/chunkmydocs/chunkmydocs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chunkmydocs-service
  namespace: chunkmydocs
  labels:
    app.kubernetes.io/name: chunkmydocs
  annotations:
    cloud.google.com/backend-config: '{"default": "chunkmydocs-backendconfig"}'
spec:
  selector:
    app.kubernetes.io/name: chunkmydocs
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
