kube/gcp/chunkmydocs/chunkmydocs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chunkmydocs-ingress
  namespace: chunkmydocs
  labels:
    app: chunkmydocs
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  ingressClassName: gce
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chunkmydocs-service
            port:
              number: 8000
